@@ -1,8 +1,8 @@
-grid.comment <- function(name, comment, vp = NULL) {
-    grid.draw(commentGrob(name, comment, vp))
+grid.comment <- function(comment, name = NULL, vp = NULL) {
+    grid.draw(commentGrob(comment, name, vp))
 }
 
-commentGrob <- function(name, comment, vp = NULL) {
+commentGrob <- function(comment, name = NULL, vp = NULL) {
     ng <- nullGrob(name = name, vp = vp)
     ng$comment <- comment
     cl <- class(ng)
